syntax = "proto3";

package daemon;
option go_package = "github.com/sagernet/sing-box-daemon/daemon";

import "google/protobuf/empty.proto";

message String {
  string value = 1;
}

message Bool {
  bool value = 1;
}

message SetupOptions {
  string workingDirectory = 1;
  string tempDirectory = 2;
  bool disableColors = 3;
  int32 logMaxLines = 4;
}

message Version {
  string version = 1;
}

message MemoryLimitOptions {
  bool enabled = 1;
  uint64 limit = 2;
}

message ServiceStatus {
  enum Type {
    IDLE = 0;
    STARTING = 1;
    STARTED = 2;
    STOPPING = 3;
  }
  Type status = 1;
}

message Log {
  oneof event {
    LogMessage message = 1;
    ResetMessage reset = 2;
  }

  enum Level {
    PANIC = 0;
    FATAL = 1;
    ERROR = 2;
    WARN = 3;
    INFO = 4;
    DEBUG = 5;
    TRACE = 6;
  }

  message LogMessage {
    Level level = 1;
    string message = 2;
  }

  message ResetMessage {
    repeated LogMessage messages = 1;
  }
}

message Status {
  uint64 memory = 1;
  uint64 memoryInuse = 2;
  int32 goroutines = 3;
  int32 connectionsIn = 4;
  int32 connectionsOut = 5;
  bool trafficAvailable = 6;
  int64 uplink = 7;
  int64 downlink = 8;
  int64 uplinkTotal = 9;
  int64 downlinkTotal = 10;
}

message Groups {
  repeated Group group = 1;
}

message Group {
  string tag = 1;
  string type = 2;
  bool selectable = 3;
  string selected = 4;
  bool isExpand = 5;
  repeated GroupItem items = 6;
}

message GroupItem {
  string tag = 1;
  string type = 2;
  int64 urlTestTime = 3;
  int32 urlTestDelay = 4;
}

message SelectOutboundOptions {
  string groupTag = 1;
  string outboundTag = 2;
}

message GroupExpandOptions {
  string groupTag = 1;
  bool isExpand = 2;
}

message ClashMode {
  string newMode = 3;
}

message ClashModeStatus {
  repeated string modeList = 1;
  string currentMode = 2;
}

message SystemProxyStatus {
  bool available = 1;
  bool enabled = 2;
}

service Daemon {

  rpc Setup(SetupOptions) returns(google.protobuf.Empty) {}
  rpc GetVersion(google.protobuf.Empty) returns (Version) {}
  rpc SetMemoryLimit(MemoryLimitOptions) returns(google.protobuf.Empty) {}
  rpc CheckConfig(String) returns (google.protobuf.Empty) {}

  rpc StartService(String) returns(google.protobuf.Empty) {}
  rpc StopService(google.protobuf.Empty) returns(google.protobuf.Empty) {}

  rpc DeviceSleep(google.protobuf.Empty) returns(google.protobuf.Empty) {}
  rpc DeviceWake(google.protobuf.Empty) returns(google.protobuf.Empty) {}

  rpc SubscribeServiceStatus(google.protobuf.Empty) returns(stream ServiceStatus) {}
  rpc SubscribeLog(google.protobuf.Empty) returns(stream Log) {}
  rpc SubscribeStatus(google.protobuf.Empty) returns(stream Status) {}
  rpc SubscribeGroups(google.protobuf.Empty) returns(stream Groups) {}

  rpc URLTest(String) returns(google.protobuf.Empty) {}
  rpc SelectOutbound(SelectOutboundOptions) returns (google.protobuf.Empty) {}
  rpc SetGroupExpand(GroupExpandOptions) returns (google.protobuf.Empty) {}

  rpc GetClashModeStatus(google.protobuf.Empty) returns(ClashModeStatus) {}
  rpc SubscribeClashMode(google.protobuf.Empty) returns(stream ClashMode) {}
  rpc SetClashMode(String) returns(google.protobuf.Empty) {}

  rpc GetSystemProxyStatus(google.protobuf.Empty) returns(SystemProxyStatus) {}
  rpc SetSystemProxyEnabled(Bool) returns(google.protobuf.Empty) {}

}
